--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,11 @@ python:
   - '3.6'
 script:
   - python -m pytest
+
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/23509aeaadb34d92a91b
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
