--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,4 @@ script:
   - python -m pytest
 
 notifications:
-  webhooks:
-    urls:
-      - https://webhooks.gitter.im/e/23509aeaadb34d92a91b
-    on_success: change  # options: [always|never|change] default: always
-    on_failure: always  # options: [always|never|change] default: always
-    on_start: never     # options: [always|never|change] default: always
+  slack: pg-ai:i5jsFFXMYVjBKQe3gCnbuFn1
